Add lang attribute to h1

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en-US">
   <head>
+    <title>My website!</title>
     <meta charset="UTF-8">
-    <title>Change Me!</title>
   </head>
-  
+
   <body>
-    <h1>Good afternoon!</h1>
+    <h1 lang="es">Espanol: Que es eso?</h1>
   </body>
 </html>
