Added lists to blog

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -7,6 +7,57 @@
   </head>
 
   <body>
-    <h1 lang="es">Espanol: Que es eso?</h1>
+    <h1>Dune: Messiah</h1>
+    <p>Note: the following sections are dedicated to impactful quotes, character descriptions, and themes</p>
+    <h2>Characters</h2>
+    <ul>
+      <li>Alia
+        <ul>
+          <li>Alias: Saint Alia of the Knife</li>
+          <dl>
+            <dt>
+              Character Description
+            </dt>
+            <dd>Alia is raised in a community of Fremen, led by her brother in an effort to control the planet and its production of melange. Alia is captured and Leto is killed in a Sardaukar raid on the sietch; she is presented to the Padishah Emperor Shaddam Corrino IV, who notes that she had been "in command of one of the attacking groups" of Fremen rebels ("mostly of women, children, and old men") that nearly decimated his raiding party. Mature far beyond her four years, Alia escapes during the final battle of Arrakeen, but not before poisoning her grandfather, Baron Harkonnen, with a deadly gom jabbar. Afterwards, she wanders the battlefield of Arrakeen killing fallen Sardaukar and Harkonnen soldiers with a crysknife, earning her the holy epithet "St. Alia of the Knife."
+            </dd>
+          </dl>
+        </ul>
+      </li>
+      <li>Paul Atreides
+        <ul>
+          <li>Age: 29</li>
+          <li>Sex: Male</li>
+          <li>D.O.B: 10,175 AG</li>
+          <li>Parents: Leto Atreides I, Lady Jessica</li>
+          <li>House: Atreides</li>
+          <li>Description: Emperor of the known universe and ruler of Arrakis, Paul controls the spice, and subsequently has the universe in a stranglehold</li>
+          <li>
+            Aliias: Usul, Muad'Dib, Lisan Al Gaib, The Preacher
+          </li>
+        </ul>
+      </li>
+      <li>Stilgar</li>
+      <li>The ghola, Duncan</li>
+    </ul>
+    <h3>From The Tabla Memorium</h3>
+    <p>Such a rich store of myths enfolds Paul Muad'dib, the Mentat Emperor, and
+      his sister, Alia, it is difficult to see the real persons behind these veils. But
+      there were, after all, a man born Paul Atreides and a woman born Alia.
+      Their flesh was subject to space and time. And even though their oracular
+      powers placed them beyond the usual limits of time and space, they came
+      from human stock. They experienced real events which left real traces upon
+      a real universe.
+      To understand them, it must be seen that their catastrophe was the
+      catastrophe of all mankind. This work is dedicated, then, not to Muad'dib or
+      his sister, but to their heirs -- to all of us.</p>
+    <p><em>-Dedication in the Muad'dib Concordance as copied from The Tabla
+      Memorium of the Mahdi Spirit Cult</em></p>  
+
+    <h3><strong>Chapter 1</strong></h3>
+    <p>There exists no separation between gods and men: one blends softly casual
+      into the other</p>
+    <p>
+      <em>-Proverbs of Muad'dib</em>
+    </p>
   </body>
 </html>
