added additional directory dedicated to relative navigation

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,6 +8,8 @@
 
   <body>
     <h1>Homepage</h1>
-    <a>About Operation Ragna</a>
+    <a href="https://www.wikiwand.com/en/articles/The_Evening_and_the_Morning" target="_blank" rel="noopener noreferrer">About <em>The evening and the morning</em></a>
+    <br>
+    <a href="pages/about.html">About</a>
   </body>
 </html>
