Add landing page

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -3,13 +3,31 @@
 <html lang="en-US">
   <head>
     <title>Linking</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
   </head>
 
   <body>
     <h1>Homepage</h1>
-    <a href="https://www.wikiwand.com/en/articles/The_Evening_and_the_Morning" target="_blank" rel="noopener noreferrer">About <em>The evening and the morning</em></a>
-    <br>
-    <a href="pages/about.html">About</a>
+    <p>
+      <a
+        href="https://www.wikiwand.com/en/articles/The_Evening_and_the_Morning"
+        target="_blank"
+        rel="noopener noreferrer"
+        >About<em>The evening and the morning</em></a
+      >
+    </p>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/en/b/bc/The_Evening_and_the_Morning.jpg"
+      alt="Evening And The Morning Book Cover"
+      height="309"
+      width="205"
+    />
+    <img
+      src="./images/Screenshot2.png"
+      alt="Golden Kamuy Title"
+      width="392"
+      height="95"
+    />
+    <p><a href="./pages/about.html">About</a></p>
   </body>
 </html>
