Add directory for reference pages

--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -3,10 +3,11 @@
 <html lang="en">
   <head>
     <title>Welcome! About us</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
   </head>
 
   <body>
     <h1>About Page</h1>
+    <img src="../images/about-us.jpg" alt="About us" width="300" height="225" />
   </body>
 </html>
