Add chapter quotes from Dune Chapters 1-3

--- a/IntoTheDuniverse/pages/quotes.html
+++ b/IntoTheDuniverse/pages/quotes.html
@@ -6,5 +6,59 @@
     <meta charset="UTF-8" />
   </head>
 
-  <body></body>
+  <body>
+    <h1>Dune Chapter Quotes</h1>
+    <p>
+      At the start of each chapter begeins a quote from some person, some book,
+      or some other source that hints at the direction and themes of the ensuing
+      chapter. This page here is meant to act as a chapterhouse of all the
+      beginning chapter quotes of the book DUNE.
+    </p>
+    <h3>Chapter 1</h3>
+    <blockquote
+      cite="https://www.goodreads.com/quotes/354886-a-beginning-is-the-time-for-taking-the-most-delicate"
+    >
+      <p>
+        <em
+          >“A beginning is the time for taking the most delicate care that the
+          balances are correct. This every sister of the Bene Gesserit knows. To
+          begin your study of the life of Maud'Dib, then, take care that you
+          first place him in his time: born in the 57th year of the Padishah
+          Emperor, Shaddam IV. And take the most special care that you locate
+          Maud'Dib in his place: the planet Arrakis. Do not be deceived by the
+          fact that he was born on Caladan and lived his first fifteen years
+          there. Arrakis, the planet known as Dune, is forever his place.”</em
+        >
+      </p>
+      <p>—from "Manual of Muad'Dib" by the Princess Irulan</p>
+    </blockquote>
+
+    <h3>Chapter 2</h3>
+    <blockquote>
+      <p>
+        <em
+          >“To attempt an understanding of Muad’Dib without understanding his
+          mortal enemies, the Harkonnens, is to attempt seeing Truth without
+          knowing Falsehood. It is the attempt to see the Light without knowing
+          Darkness. It cannot be.</em
+        >
+      </p>
+      <p>—from "Manual of Muad'Dib" by the Princess Irulan</p>
+    </blockquote>
+
+    <h3>Chapter 3</h3>
+    <blockquote>
+      <p>
+        <em>
+          “Thus spoke St. Alia-of-the-Knife: “The Reverend Mother must combine
+          the seductive wiles of a courtesan with the untouchable majesty of a
+          virgin goddess, holding these attributes in tension so long as the
+          powers of her youth endure. For when youth and beauty have gone, she
+          will find that the place-between, once occupied by tension, has become
+          a wellspring of cunning and resourcefulness.”
+        </em>
+      </p>
+      <p>—from "Muad'Dib: Family Commentaries" by the Princess Irulan</p>
+    </blockquote>
+  </body>
 </html>
