Add Duke leto character description and changed img tag to figure tag
Experimented with figure tag and found that the quote attached to the image as a figureqoute
tag looked more presentable compared to an img tag and a p/h tag

--- a/IntoTheDuniverse/pages/characters.html
+++ b/IntoTheDuniverse/pages/characters.html
@@ -10,12 +10,18 @@
     <h1>Protagonists</h1>
     <dl>
       <h2>Paul Atreides</h2>
-      <dd>
+      <figure>
         <img src="../images/paul-wide.png" alt="Paul Atreides" width="600" />
-        <h3>
-          "There's unknown all around at every moment. That's where you seek
-          knowledge"
-        </h3>
+        <figcaption>
+          <strong
+            ><em
+              >"There's unknown all around at every moment. That's where you
+              seek knowledge"</em
+            ></strong
+          >
+        </figcaption>
+      </figure>
+      <dd>
         <p>
           Also known as Usul, Mahdi, Lisan al-Gaib and the Kwisatz Haderach,
           Paul is the son of Duke Leto and Lady Jessica and older brother of
@@ -73,9 +79,17 @@
 
     <dl>
       <h2>Stilgar</h2>
-      <dd>
+      <figure>
         <img src="../images/stilgar-wide.webp" alt="Stilgar" width="600" />
-        <h3>"My duty is the strength of the tribe. That is my only duty"</h3>
+        <figcaption>
+          <strong
+            ><em
+              >"My duty is the strength of the tribe. That is my only duty"</em
+            ></strong
+          >
+        </figcaption>
+      </figure>
+      <dd>
         <p>
           A Fremen leader who challenges and then accepts Paul Atreides and Lady
           Jessica into his sietch, or Fremen community. He is a wise and capable
@@ -109,9 +123,17 @@
 
     <dl>
       <h2>Alia Atreides</h2>
-      <dd>
+      <figure>
         <img src="../images/alia-wide.webp" alt="Paul Atreides" width="600" />
-        <h3>"Words are such gross machinery, so primitive and ambiguous"</h3>
+        <figcaption>
+          <strong
+            ><em
+              >"Words are such gross machinery, so primitive and ambiguous"</em
+            ></strong
+          >
+        </figcaption>
+      </figure>
+      <dd>
         <p>
           Alia Atreides is Paul’s Atreides’s teenage sister. She is feisty,
           precocious, and highly sexually awakened for her age. Lady Jessica had
@@ -147,6 +169,71 @@
               <strong>Additional Information:</strong> Alia Wiki
             </a>
           </em>
+        </p>
+      </dd>
+    </dl>
+
+    <dl>
+      <h2>Duke Leto Atreides</h2>
+      <figure>
+        <img
+          src="../images/leto-wide.png"
+          alt="Leto Atreides prepares for the acceptance of the plant Dune"
+          width="600"
+        />
+        <figcaption>
+          <strong
+            ><em
+              >“A person needs new experiences. It jars something deep inside,
+              allowing them to grow. Without change something sleeps inside us,
+              and seldom awakens. The sleeper must awaken.”</em
+            ></strong
+          >
+        </figcaption>
+      </figure>
+      <dd>
+        <p>
+          A compassionate but doomed noble leader, the Duke is Head of House
+          Atreides. He is a hardworking and responsible commander who dearly
+          loves his concubine, Lady Jessica, and son, Paul. He is well-regarded
+          by his people and the other Great Houses, except for House Harkonnen
+          who are mortal enemies to the Atreides. From the novel’s beginning,
+          the Duke’s fate is sealed for an early death at the hands of Baron
+          Harkonnen. In collusion with the Baron, the Emperor Shaddam IV assigns
+          the Duke to govern Arrakis. It is a desolate yet valuable planet due
+          to its unique production of the spice drug. The Duke knows he is
+          likely walking into a trap but takes up leadership on Arrakis anyway;
+          perhaps he views the Arrakeen spice profits as outweighing the
+          approaching danger. As predicted, the Duke meets his death shortly
+          after taking up his post on Arrakis. He has been betrayed by one of
+          his most trusted staff, Dr. Wellington Yueh, who drugs and captures
+          him. Dragged before Baron Harkonnen and knowing that he will be
+          murdered shortly, the Duke’s final cares are for his family as he
+          sacrifices his life in an attempt to kill the Baron. He dies without
+          knowing that Jessica is pregnant with their daughter, Alia. The Duke’s
+          legacy as an honorable and compassionate leader is overshadowed by the
+          immense exploits of his son, Paul, who develops into a messiah-figure
+          for a number of key groups in the Imperium and wins the Imperial
+          throne.
+        </p>
+        <h4>Bio</h4>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <p>
+          <em
+            ><a
+              href="https://dune.fandom.com/wiki/Leto_Atreides_I"
+              target="_blank"
+              rel="noopener norefferer"
+              >Additional Information: Duke Leto Wiki</a
+            ></em
+          >
         </p>
       </dd>
     </dl>
